fix: styled root element overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden auto;
 }
 
 #modals {
